src/main/webapp/css/global.css
/*!
 * Start Bootstrap - Createive v4.0.0-beta (http://startbootstrap.com/template-overviews/creative)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-creative/blob/master/LICENSE)
 */

body,
html {
  width: 100%;
  height: 100%;
}

body {
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
}

hr {
  max-width: 50px;
  border-width: 3px;
  border-color: #0089d0;
}

hr.light {
  border-color: white;
}

a {
  color: #0089d0;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}

a:focus,
a:hover {
  color: #0089d0;
}

p {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 20px;
}

.text-faded {
  color: rgba(255, 255, 255, 0.7);
}

section {
  padding: 0;
}

.section-heading {
  margin-top: 0;
}

.section-heading sup {
  postion: absolute;
  top: -1rem;
  font-size: 1rem;
}

::-moz-selection {
  color: white;
  background: #222222;
  text-shadow: none;
}

::selection {
  color: white;
  background: #222222;
  text-shadow: none;
}

img::selection {
  color: white;
  background: transparent;
}

img::-moz-selection {
  color: white;
  background: transparent;
}

body {
  -webkit-tap-highlight-color: #222222;
}

#mainNav {
  border-color: rgba(34, 34, 34, 0.05);
  background-color: white;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}

#mainNav .navbar-brand {
  font-weight: 700;
  text-transform: uppercase;
  color: #0089d0;
}

#mainNav .navbar-brand:focus,
#mainNav .navbar-brand:hover {
  color: #0089d0;
}

#mainNav .navbar-about {
  font-size: 11px;
  font-weight: 700;
  border: 1px dashed #eeeeee;
}

#mainNav .navbar-about:hover {
  border-style: solid;
}

#mainNav .navbar-toggle {
  font-size: 12px;
  font-weight: 700;
  text-transform: uppercase;
  color: #222222;
}

#mainNav .navbar-nav>li.nav-item>a.nav-link:focus,
#mainNav .navbar-nav>li.nav-item>a.nav-link {
  font-size: 13px;
  font-weight: 700;
  text-transform: uppercase;
  color: #222222;
}

#mainNav .navbar-nav>li.nav-item>a.nav-link:focus:hover,
#mainNav .navbar-nav>li.nav-item>a.nav-link:hover {
  color: #0089d0;
}

#mainNav .navbar-nav>li.nav-item>a.nav-link:focus.active,
#mainNav .navbar-nav>li.nav-item>a.nav-link.active {
  color: #0089d0 !important;
  background-color: transparent;
}

#mainNav .navbar-nav>li.nav-item>a.nav-link:focus.active:hover,
#mainNav .navbar-nav>li.nav-item>a.nav-link.active:hover {
  background-color: transparent;
}

@media (min-width: 992px) {
  #mainNav {
    border-color: rgba(255, 255, 255, 0.3);
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-brand:focus,
  #mainNav .navbar-brand:hover {
    color: white;
  }
  #mainNav .navbar-nav>li.nav-item>a.nav-link,
  #mainNav .navbar-nav>li.nav-item>a.nav-link:focus {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-nav>li.nav-item>a.nav-link:hover,
  #mainNav .navbar-nav>li.nav-item>a.nav-link:focus:hover {
    color: white;
  }
  #mainNav.navbar-shrink {
    border-color: rgba(34, 34, 34, 0.05);
    background-color: white;
  }
  #mainNav.navbar-shrink .navbar-brand {
    font-size: 16px;
    color: #0089d0;
  }
  #mainNav.navbar-shrink .navbar-brand:focus,
  #mainNav.navbar-shrink .navbar-brand:hover {
    color: #0089d0;
  }
  #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link,
  #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:focus {
    color: #222222;
  }
  #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:hover,
  #mainNav.navbar-shrink .navbar-nav>li.nav-item>a.nav-link:focus:hover {
    color: #0089d0;
  }
}

header.home-shore {
  position: relative;
  width: 100%;
  min-height: auto;
  text-align: center;
  color: white;
  background-image: url("../img/header.jpg");
  background-position: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

header.masthead .header-content {
  position: relative;
  width: 100%;
  padding: 100px 15px 100px;
  text-align: center;
}

header.masthead .header-content .header-content-inner h1 {
  font-size: 22px;
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 0;
  text-transform: uppercase;
}
header.masthead .header-content .header-content-inner h3 {
  font-size: 1.25rem;
}

header.masthead .header-content .header-content-inner hr {
  margin: 30px auto;
}

header.masthead .header-content .header-content-inner p {
  font-size: 16px;
  font-weight: 300;
}

header.home-shore {
  color: rgba(255, 255, 255, 0.7);
}

@media (min-width: 768px) {
  header.masthead {
    height: 100%;
    min-height: 600px;
  }
  header.masthead .header-content {
    position: absolute;
    top: 60%;
    padding: 0 50px;
    -webkit-transform: translateY(-60%);
    -ms-transform: translateY(-60%);
    transform: translateY(-60%);
  }
  header.masthead .header-content .header-content-inner {
    max-width: 1000px;
    margin-right: auto;
    margin-left: auto;
  }
  header.masthead .header-content .header-content-inner h1 {
    font-size: 50px;
  }
  header.masthead .header-content .header-content-inner p {
    max-width: 80%;
    margin-right: auto;
    margin-left: auto;
  }
}

.service-box {
  max-width: 400px;
  margin: 50px auto 0;
}

.service-box p {
  margin-bottom: 0;
}

.call-to-action {
  padding: 50px 0;
}

.call-to-action h2 {
  margin: 0 auto 20px;
}

.no-gutter>[class*='col-'] {
  padding-right: 0;
  padding-left: 0;
}

.btn-default {
  color: #222222;
  border-color: white;
  background-color: white;
}

.btn-default.focus,
.btn-default:focus {
  color: #222222;
  border-color: #bfbfbf;
  background-color: #e6e6e6;
}

.btn-default:hover {
  color: #222222;
  border-color: #e0e0e0;
  background-color: #e6e6e6;
}

.btn-default.active,
.btn-default:active,
.open>.btn-default.dropdown-toggle {
  color: #222222;
  border-color: #e0e0e0;
  background-color: #e6e6e6;
}

.btn-default.active.focus,
.btn-default.active:focus,
.btn-default.active:hover,
.btn-default:active.focus,
.btn-default:active:focus,
.btn-default:active:hover,
.open>.btn-default.dropdown-toggle.focus,
.open>.btn-default.dropdown-toggle:focus,
.open>.btn-default.dropdown-toggle:hover {
  color: #222222;
  border-color: #bfbfbf;
  background-color: #d4d4d4;
}

.btn-default.active,
.btn-default:active,
.open>.btn-default.dropdown-toggle {
  background-image: none;
}

.btn-default.disabled.focus,
.btn-default.disabled:focus,
.btn-default.disabled:hover,
.btn-default[disabled].focus,
.btn-default[disabled]:focus,
.btn-default[disabled]:hover,
fieldset[disabled] .btn-default.focus,
fieldset[disabled] .btn-default:focus,
fieldset[disabled] .btn-default:hover {
  border-color: white;
  background-color: white;
}

.btn-default .badge {
  color: white;
  background-color: #222222;
}

.btn-primary {
  color: white;
  border-color: #0089d0;
  background-color: #0089d0;
}

.btn-primary.focus,
.btn-primary:focus {
  color: white;
  border-color: #a4270d;
  background-color: #eb3812;
}

.btn-primary:hover {
  color: white;
  border-color: #e13612;
  background-color: #eb3812;
}

.btn-primary.active,
.btn-primary:active,
.open>.btn-primary.dropdown-toggle {
  color: white;
  border-color: #e13612;
  background-color: #eb3812;
}

.btn-primary.active.focus,
.btn-primary.active:focus,
.btn-primary.active:hover,
.btn-primary:active.focus,
.btn-primary:active:focus,
.btn-primary:active:hover,
.open>.btn-primary.dropdown-toggle.focus,
.open>.btn-primary.dropdown-toggle:focus,
.open>.btn-primary.dropdown-toggle:hover {
  color: white;
  border-color: #a4270d;
  background-color: #c93110;
}

.btn-primary.active,
.btn-primary:active,
.open>.btn-primary.dropdown-toggle {
  background-image: none;
}

.btn-primary.disabled.focus,
.btn-primary.disabled:focus,
.btn-primary.disabled:hover,
.btn-primary[disabled].focus,
.btn-primary[disabled]:focus,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary.focus,
fieldset[disabled] .btn-primary:focus,
fieldset[disabled] .btn-primary:hover {
  border-color: #0089d0;
  background-color: #0089d0;
}

.btn-primary .badge {
  color: #0089d0;
  background-color: white;
}

.btn {
  font-weight: 700;
  text-transform: uppercase;
  border: none;
  /*border-radius: 300px;*/
}

.btn-xl {
  padding: 15px 30px;
}


/*
.counts {
  position: fixed;
  top: 75px;
  left: 0px;
}
.counts span {
  display: block;
}*/


.counts {
  float: left;
  position: relative;
  width: 19%;
  height: 0;
  margin: 1% 0.5%;
  padding-bottom: 19%;
}
.counts:last-of-type {
  margin-right: 0;
}
.counts a {
  display: block;
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  border-radius: 10px;
  background-color: #fff;
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center center;
  -webkit-transition: all .2s ease-out;
  transition: all .2s ease-out;
}
.counts a:hover {
  background-color: #222;
  background-size: 0%;
  -webkit-transition: all .2s ease-out;
  transition: all .2s ease-out;
}

.counts__name {
  position: absolute;
  top: 50%;
  width: 100%;
  margin-top: -7px;
  color: #fff;
  font-size: 13px;
  text-align: center;
  -webkit-transition: all .3s ease-out;
  transition: all .3s ease-out;
  opacity: 0;
  -webkit-filter: blur(25px);
          filter: blur(25px);
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}
.counts:hover .icon__name {
  -webkit-transition: all .3s ease-out;
  transition: all .3s ease-out;
  opacity: 1;
  -webkit-filter: blur(0);
          filter: blur(0);
}


.legend {
  margin-bottom: 20px;
  font-size: 1em;
}

.legend-item {
  display: inline-block;
  padding: .25em .5em;
  font-weight: 700;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: .25rem;
}

.legend-item-one {
  background-color: #6177aa;
}

.legend-item-two {
  background-color: #fc8d62;
}

.legend-item-three {
  background-color: #66c2a5;
}

.legend-item-four {
  background-color: #54278f;
}

.legend-item-five {
  background-color: #a63603;
}


/* tooltip styles */
.tooltip-inner {
  max-width: 320px;
  color: #eee;
  background-color: #222;
}
.tooltip.bs-tooltip-auto[x-placement^=top] .arrow::before, .tooltip.bs-tooltip-top .arrow::before {
  border-top-color: #222;
}
.tooltip.bs-tooltip-auto[x-placement^=right] .arrow::before, .tooltip.bs-tooltip-right .arrow::before {
  border-right-color: #222;
}
.tooltip.bs-tooltip-auto[x-placement^=bottom] .arrow::before, .tooltip.bs-tooltip-bottom .arrow::before {
  border-bottom-color: #222;
}
.tooltip.bs-tooltip-auto[x-placement^=left] .arrow::before, .tooltip.bs-tooltip-left .arrow::before {
  border-left-color: #222;
}


@-webkit-keyframes rota {
  from {}
  to {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes rota {
  from {}
  to {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@-webkit-keyframes opa {
  0% {}
  12.0% {
    opacity: 0.80;
  }
  19.5% {
    opacity: 0.88;
  }
  37.2% {
    opacity: 0.64;
  }
  40.5% {
    opacity: 0.52;
  }
  52.7% {
    opacity: 0.69;
  }
  60.2% {
    opacity: 0.60;
  }
  66.6% {
    opacity: 0.52;
  }
  70.0% {
    opacity: 0.63;
  }
  79.9% {
    opacity: 0.60;
  }
  84.2% {
    opacity: 0.75;
  }
  91.0% {
    opacity: 0.87;
  }
}

@keyframes opa {
  0% {}
  12.0% {
    opacity: 0.80;
  }
  19.5% {
    opacity: 0.88;
  }
  37.2% {
    opacity: 0.64;
  }
  40.5% {
    opacity: 0.52;
  }
  52.7% {
    opacity: 0.69;
  }
  60.2% {
    opacity: 0.60;
  }
  66.6% {
    opacity: 0.52;
  }
  70.0% {
    opacity: 0.63;
  }
  79.9% {
    opacity: 0.60;
  }
  84.2% {
    opacity: 0.75;
  }
  91.0% {
    opacity: 0.87;
  }
}

